# taggygreen.api

./: .dockerignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 02d3cf85f4bb_create_lead_model.py  5e9607146fc7_alter_lead_events_columns.py  664ac26ebd72_add_created_at_to_event.py  ce2b074ef45d_initial_tables.py
scripts/: seed_db.py
src/: main.py
src/api/: __init__.py  dashboard.py  esg.py  seed_db.py
src/api/v1/: b2b.py  b2c.py  esg.py  marketplace.py  simulador.py
src/core/: config.py  enums.py
src/database/: seed.py  session.py
src/models/: __init__.py  company.py  event.py  lead.py  passage.py  product.py  redemption.py  user.py  vehicle.py
src/repositories/: event_repository.py  lead_repository.py  market_repository.py  user_repository.py
src/schemas/: dashboard_schema.py  esg.py  esg_schema.py  market_schema.py  simulador_schema.py  user_schema.py
src/services/: b2b_service.py  b2c_service.py  esg_engine.py  fuel_service.py  market_service.py  simulador_service.py  test_esg_engine.py
tests/: test_b2b.py  test_b2c.py  test_esg_engine.py  test_fuel_service.py  test_marketplace.py  test_simulador.py
